# temperature-aggregator

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  temperature.rs  temperature_service.rs
src/utils/temperature/: converter.rs
