[package]
name = "temperature-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
