[package]
name = "temperature-aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
tokio = { version = "1.29.1", features = ["full"] }
serde_json = "1.0.104"
tower = "0.4.13"
hyper = { version = "0.14.27", features = ["full"] }
anyhow = { version = "1.0", default-features = false }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
wiremock = "0.5.19"
